# NPC-Portrait-Creator

./: AssetManager.cpp  AssetManager.h  BsaManager.cpp  BsaManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CommonMatrices.h  NifModel.cpp  NifModel.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skeleton.cpp  Skeleton.h  TextureManager.cpp  TextureManager.h  Version.h  lighting.json  main.cpp
Resources/: appicon.rc.in
shaders/: basic.frag  basic.vert  debug_line.frag  debug_line.vert  depth_shader.frag  depth_shader.vert
